// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`view list descending orderBy + first + offset 1`] = `
Object {
  "data": Array [
    BoardMemberView {
      "boardId": "47",
      "boardName": "Accusamus sequi",
      "inviteCount": "1",
      "invitees": Array [
        "70",
      ],
      "inviterId": "70",
      "username": "estell684",
    },
    BoardMemberView {
      "boardId": "47",
      "boardName": "Accusamus sequi",
      "inviteCount": "1",
      "invitees": Array [
        "60",
      ],
      "inviterId": "60",
      "username": "christa878",
    },
    BoardMemberView {
      "boardId": "47",
      "boardName": "Accusamus sequi",
      "inviteCount": "1",
      "invitees": Array [
        "58",
      ],
      "inviterId": "58",
      "username": "eladio832",
    },
  ],
  "pageInfo": Object {
    "hasNextPage": true,
    "hasPreviousPage": false,
  },
}
`;

exports[`view list descending orderBy + first 1`] = `
Object {
  "data": Array [
    BoardMemberView {
      "boardId": "50",
      "boardName": "Sed assumenda repellendus",
      "inviteCount": "4",
      "invitees": Array [
        "51",
        "4",
        "14",
        "90",
      ],
      "inviterId": "84",
      "username": "anne750",
    },
    BoardMemberView {
      "boardId": "49",
      "boardName": "Odit qui",
      "inviteCount": "4",
      "invitees": Array [
        "70",
        "8",
        "46",
        "100",
      ],
      "inviterId": "26",
      "username": "araceli794",
    },
    BoardMemberView {
      "boardId": "48",
      "boardName": "Nobis totam",
      "inviteCount": "4",
      "invitees": Array [
        "107",
        "81",
        "21",
        "103",
      ],
      "inviterId": "41",
      "username": "myrl112",
    },
  ],
  "pageInfo": Object {
    "hasNextPage": true,
    "hasPreviousPage": false,
  },
}
`;

exports[`view list descending orderBy + last + offset 1`] = `
Object {
  "data": Array [
    BoardMemberView {
      "boardId": "4",
      "boardName": "Delectus qui maxime",
      "inviteCount": "1",
      "invitees": Array [
        "5",
      ],
      "inviterId": "5",
      "username": "griffin807",
    },
    BoardMemberView {
      "boardId": "3",
      "boardName": "Occaecati adipisci vel",
      "inviteCount": "4",
      "invitees": Array [
        "1",
        "38",
        "24",
        "61",
      ],
      "inviterId": "79",
      "username": "joe922",
    },
    BoardMemberView {
      "boardId": "2",
      "boardName": "Et eum",
      "inviteCount": "2",
      "invitees": Array [
        "40",
        "92",
      ],
      "inviterId": "46",
      "username": "antonia919",
    },
  ],
  "pageInfo": Object {
    "hasNextPage": false,
    "hasPreviousPage": true,
  },
}
`;

exports[`view list descending orderBy + last 1`] = `
Object {
  "data": Array [
    BoardMemberView {
      "boardId": "1",
      "boardName": "Reiciendis quaerat",
      "inviteCount": "1",
      "invitees": Array [
        "63",
      ],
      "inviterId": "63",
      "username": "sibyl966",
    },
    BoardMemberView {
      "boardId": "1",
      "boardName": "Reiciendis quaerat",
      "inviteCount": "1",
      "invitees": Array [
        "42",
      ],
      "inviterId": "42",
      "username": "alva280",
    },
    BoardMemberView {
      "boardId": "1",
      "boardName": "Reiciendis quaerat",
      "inviteCount": "1",
      "invitees": Array [
        "34",
      ],
      "inviterId": "34",
      "username": "arlie128",
    },
  ],
  "pageInfo": Object {
    "hasNextPage": false,
    "hasPreviousPage": true,
  },
}
`;

exports[`view list descending orderBy + offset 1`] = `
Object {
  "data": Array [
    BoardMemberView {
      "boardId": "47",
      "boardName": "Accusamus sequi",
      "inviteCount": "1",
      "invitees": Array [
        "104",
      ],
      "inviterId": "104",
      "username": "joe154",
    },
    BoardMemberView {
      "boardId": "47",
      "boardName": "Accusamus sequi",
      "inviteCount": "1",
      "invitees": Array [
        "101",
      ],
      "inviterId": "101",
      "username": "isidro418",
    },
    BoardMemberView {
      "boardId": "47",
      "boardName": "Accusamus sequi",
      "inviteCount": "1",
      "invitees": Array [
        "70",
      ],
      "inviterId": "70",
      "username": "estell684",
    },
    BoardMemberView {
      "boardId": "47",
      "boardName": "Accusamus sequi",
      "inviteCount": "1",
      "invitees": Array [
        "60",
      ],
      "inviterId": "60",
      "username": "christa878",
    },
    BoardMemberView {
      "boardId": "47",
      "boardName": "Accusamus sequi",
      "inviteCount": "1",
      "invitees": Array [
        "58",
      ],
      "inviterId": "58",
      "username": "eladio832",
    },
    BoardMemberView {
      "boardId": "47",
      "boardName": "Accusamus sequi",
      "inviteCount": "1",
      "invitees": Array [
        "53",
      ],
      "inviterId": "53",
      "username": "emelie578",
    },
    BoardMemberView {
      "boardId": "47",
      "boardName": "Accusamus sequi",
      "inviteCount": "1",
      "invitees": Array [
        "49",
      ],
      "inviterId": "49",
      "username": "nettie731",
    },
    BoardMemberView {
      "boardId": "47",
      "boardName": "Accusamus sequi",
      "inviteCount": "1",
      "invitees": Array [
        "33",
      ],
      "inviterId": "33",
      "username": "hiram985",
    },
    BoardMemberView {
      "boardId": "47",
      "boardName": "Accusamus sequi",
      "inviteCount": "1",
      "invitees": Array [
        "26",
      ],
      "inviterId": "26",
      "username": "araceli794",
    },
    BoardMemberView {
      "boardId": "46",
      "boardName": "Et architecto",
      "inviteCount": "4",
      "invitees": Array [
        "109",
        "32",
        "45",
        "40",
      ],
      "inviterId": "63",
      "username": "sibyl966",
    },
  ],
  "pageInfo": Object {
    "hasNextPage": true,
    "hasPreviousPage": false,
  },
}
`;

exports[`view list descending orderBy 1`] = `
Object {
  "data": Array [
    BoardMemberView {
      "boardId": "50",
      "boardName": "Sed assumenda repellendus",
      "inviteCount": "4",
      "invitees": Array [
        "51",
        "4",
        "14",
        "90",
      ],
      "inviterId": "84",
      "username": "anne750",
    },
    BoardMemberView {
      "boardId": "49",
      "boardName": "Odit qui",
      "inviteCount": "4",
      "invitees": Array [
        "70",
        "8",
        "46",
        "100",
      ],
      "inviterId": "26",
      "username": "araceli794",
    },
    BoardMemberView {
      "boardId": "48",
      "boardName": "Nobis totam",
      "inviteCount": "4",
      "invitees": Array [
        "107",
        "81",
        "21",
        "103",
      ],
      "inviterId": "41",
      "username": "myrl112",
    },
    BoardMemberView {
      "boardId": "47",
      "boardName": "Accusamus sequi",
      "inviteCount": "1",
      "invitees": Array [
        "104",
      ],
      "inviterId": "104",
      "username": "joe154",
    },
    BoardMemberView {
      "boardId": "47",
      "boardName": "Accusamus sequi",
      "inviteCount": "1",
      "invitees": Array [
        "101",
      ],
      "inviterId": "101",
      "username": "isidro418",
    },
    BoardMemberView {
      "boardId": "47",
      "boardName": "Accusamus sequi",
      "inviteCount": "1",
      "invitees": Array [
        "70",
      ],
      "inviterId": "70",
      "username": "estell684",
    },
    BoardMemberView {
      "boardId": "47",
      "boardName": "Accusamus sequi",
      "inviteCount": "1",
      "invitees": Array [
        "60",
      ],
      "inviterId": "60",
      "username": "christa878",
    },
    BoardMemberView {
      "boardId": "47",
      "boardName": "Accusamus sequi",
      "inviteCount": "1",
      "invitees": Array [
        "58",
      ],
      "inviterId": "58",
      "username": "eladio832",
    },
    BoardMemberView {
      "boardId": "47",
      "boardName": "Accusamus sequi",
      "inviteCount": "1",
      "invitees": Array [
        "53",
      ],
      "inviterId": "53",
      "username": "emelie578",
    },
    BoardMemberView {
      "boardId": "47",
      "boardName": "Accusamus sequi",
      "inviteCount": "1",
      "invitees": Array [
        "49",
      ],
      "inviterId": "49",
      "username": "nettie731",
    },
  ],
  "pageInfo": Object {
    "hasNextPage": true,
    "hasPreviousPage": false,
  },
}
`;

exports[`view list orderBy + first + offset 1`] = `
Object {
  "data": Array [
    BoardMemberView {
      "boardId": "2",
      "boardName": "Et eum",
      "inviteCount": "2",
      "invitees": Array [
        "40",
        "92",
      ],
      "inviterId": "46",
      "username": "antonia919",
    },
    BoardMemberView {
      "boardId": "3",
      "boardName": "Occaecati adipisci vel",
      "inviteCount": "4",
      "invitees": Array [
        "1",
        "38",
        "24",
        "61",
      ],
      "inviterId": "79",
      "username": "joe922",
    },
    BoardMemberView {
      "boardId": "4",
      "boardName": "Delectus qui maxime",
      "inviteCount": "1",
      "invitees": Array [
        "5",
      ],
      "inviterId": "5",
      "username": "griffin807",
    },
  ],
  "pageInfo": Object {
    "hasNextPage": true,
    "hasPreviousPage": false,
  },
}
`;

exports[`view list orderBy + first 0 1`] = `
Object {
  "data": Array [],
  "pageInfo": Object {
    "hasNextPage": false,
    "hasPreviousPage": false,
  },
}
`;

exports[`view list orderBy + first 1`] = `
Object {
  "data": Array [
    BoardMemberView {
      "boardId": "1",
      "boardName": "Reiciendis quaerat",
      "inviteCount": "1",
      "invitees": Array [
        "34",
      ],
      "inviterId": "34",
      "username": "arlie128",
    },
    BoardMemberView {
      "boardId": "1",
      "boardName": "Reiciendis quaerat",
      "inviteCount": "1",
      "invitees": Array [
        "42",
      ],
      "inviterId": "42",
      "username": "alva280",
    },
    BoardMemberView {
      "boardId": "1",
      "boardName": "Reiciendis quaerat",
      "inviteCount": "1",
      "invitees": Array [
        "63",
      ],
      "inviterId": "63",
      "username": "sibyl966",
    },
  ],
  "pageInfo": Object {
    "hasNextPage": true,
    "hasPreviousPage": false,
  },
}
`;

exports[`view list orderBy + last + offset 1`] = `
Object {
  "data": Array [
    BoardMemberView {
      "boardId": "47",
      "boardName": "Accusamus sequi",
      "inviteCount": "1",
      "invitees": Array [
        "58",
      ],
      "inviterId": "58",
      "username": "eladio832",
    },
    BoardMemberView {
      "boardId": "47",
      "boardName": "Accusamus sequi",
      "inviteCount": "1",
      "invitees": Array [
        "60",
      ],
      "inviterId": "60",
      "username": "christa878",
    },
    BoardMemberView {
      "boardId": "47",
      "boardName": "Accusamus sequi",
      "inviteCount": "1",
      "invitees": Array [
        "70",
      ],
      "inviterId": "70",
      "username": "estell684",
    },
  ],
  "pageInfo": Object {
    "hasNextPage": false,
    "hasPreviousPage": true,
  },
}
`;

exports[`view list orderBy + last 1`] = `
Object {
  "data": Array [
    BoardMemberView {
      "boardId": "48",
      "boardName": "Nobis totam",
      "inviteCount": "4",
      "invitees": Array [
        "107",
        "81",
        "21",
        "103",
      ],
      "inviterId": "41",
      "username": "myrl112",
    },
    BoardMemberView {
      "boardId": "49",
      "boardName": "Odit qui",
      "inviteCount": "4",
      "invitees": Array [
        "70",
        "8",
        "46",
        "100",
      ],
      "inviterId": "26",
      "username": "araceli794",
    },
    BoardMemberView {
      "boardId": "50",
      "boardName": "Sed assumenda repellendus",
      "inviteCount": "4",
      "invitees": Array [
        "51",
        "4",
        "14",
        "90",
      ],
      "inviterId": "84",
      "username": "anne750",
    },
  ],
  "pageInfo": Object {
    "hasNextPage": false,
    "hasPreviousPage": true,
  },
}
`;

exports[`view list orderBy + offset 1`] = `
Object {
  "data": Array [
    BoardMemberView {
      "boardId": "1",
      "boardName": "Reiciendis quaerat",
      "inviteCount": "1",
      "invitees": Array [
        "82",
      ],
      "inviterId": "82",
      "username": "dortha300",
    },
    BoardMemberView {
      "boardId": "1",
      "boardName": "Reiciendis quaerat",
      "inviteCount": "1",
      "invitees": Array [
        "91",
      ],
      "inviterId": "91",
      "username": "lionel825",
    },
    BoardMemberView {
      "boardId": "2",
      "boardName": "Et eum",
      "inviteCount": "2",
      "invitees": Array [
        "40",
        "92",
      ],
      "inviterId": "46",
      "username": "antonia919",
    },
    BoardMemberView {
      "boardId": "3",
      "boardName": "Occaecati adipisci vel",
      "inviteCount": "4",
      "invitees": Array [
        "1",
        "38",
        "24",
        "61",
      ],
      "inviterId": "79",
      "username": "joe922",
    },
    BoardMemberView {
      "boardId": "4",
      "boardName": "Delectus qui maxime",
      "inviteCount": "1",
      "invitees": Array [
        "5",
      ],
      "inviterId": "5",
      "username": "griffin807",
    },
    BoardMemberView {
      "boardId": "4",
      "boardName": "Delectus qui maxime",
      "inviteCount": "1",
      "invitees": Array [
        "9",
      ],
      "inviterId": "9",
      "username": "omari409",
    },
    BoardMemberView {
      "boardId": "4",
      "boardName": "Delectus qui maxime",
      "inviteCount": "1",
      "invitees": Array [
        "17",
      ],
      "inviterId": "17",
      "username": "fred777",
    },
    BoardMemberView {
      "boardId": "4",
      "boardName": "Delectus qui maxime",
      "inviteCount": "1",
      "invitees": Array [
        "30",
      ],
      "inviterId": "30",
      "username": "carissa722",
    },
    BoardMemberView {
      "boardId": "4",
      "boardName": "Delectus qui maxime",
      "inviteCount": "1",
      "invitees": Array [
        "33",
      ],
      "inviterId": "33",
      "username": "hiram985",
    },
    BoardMemberView {
      "boardId": "4",
      "boardName": "Delectus qui maxime",
      "inviteCount": "1",
      "invitees": Array [
        "50",
      ],
      "inviterId": "50",
      "username": "frank367",
    },
  ],
  "pageInfo": Object {
    "hasNextPage": true,
    "hasPreviousPage": false,
  },
}
`;

exports[`view list orderBy 1`] = `
Object {
  "data": Array [
    BoardMemberView {
      "boardId": "1",
      "boardName": "Reiciendis quaerat",
      "inviteCount": "1",
      "invitees": Array [
        "34",
      ],
      "inviterId": "34",
      "username": "arlie128",
    },
    BoardMemberView {
      "boardId": "1",
      "boardName": "Reiciendis quaerat",
      "inviteCount": "1",
      "invitees": Array [
        "42",
      ],
      "inviterId": "42",
      "username": "alva280",
    },
    BoardMemberView {
      "boardId": "1",
      "boardName": "Reiciendis quaerat",
      "inviteCount": "1",
      "invitees": Array [
        "63",
      ],
      "inviterId": "63",
      "username": "sibyl966",
    },
    BoardMemberView {
      "boardId": "1",
      "boardName": "Reiciendis quaerat",
      "inviteCount": "1",
      "invitees": Array [
        "82",
      ],
      "inviterId": "82",
      "username": "dortha300",
    },
    BoardMemberView {
      "boardId": "1",
      "boardName": "Reiciendis quaerat",
      "inviteCount": "1",
      "invitees": Array [
        "91",
      ],
      "inviterId": "91",
      "username": "lionel825",
    },
    BoardMemberView {
      "boardId": "2",
      "boardName": "Et eum",
      "inviteCount": "2",
      "invitees": Array [
        "40",
        "92",
      ],
      "inviterId": "46",
      "username": "antonia919",
    },
    BoardMemberView {
      "boardId": "3",
      "boardName": "Occaecati adipisci vel",
      "inviteCount": "4",
      "invitees": Array [
        "1",
        "38",
        "24",
        "61",
      ],
      "inviterId": "79",
      "username": "joe922",
    },
    BoardMemberView {
      "boardId": "4",
      "boardName": "Delectus qui maxime",
      "inviteCount": "1",
      "invitees": Array [
        "5",
      ],
      "inviterId": "5",
      "username": "griffin807",
    },
    BoardMemberView {
      "boardId": "4",
      "boardName": "Delectus qui maxime",
      "inviteCount": "1",
      "invitees": Array [
        "9",
      ],
      "inviterId": "9",
      "username": "omari409",
    },
    BoardMemberView {
      "boardId": "4",
      "boardName": "Delectus qui maxime",
      "inviteCount": "1",
      "invitees": Array [
        "17",
      ],
      "inviterId": "17",
      "username": "fred777",
    },
  ],
  "pageInfo": Object {
    "hasNextPage": true,
    "hasPreviousPage": false,
  },
}
`;

exports[`view list parentConnection + first 1`] = `
Object {
  "data": Array [
    BoardMemberView {
      "boardId": "3",
      "boardName": "Occaecati adipisci vel",
      "inviteCount": "4",
      "invitees": Array [
        "24",
        "38",
        "1",
        "61",
      ],
      "inviterId": "79",
      "username": "joe922",
    },
  ],
  "pageInfo": Object {
    "hasNextPage": true,
    "hasPreviousPage": false,
  },
}
`;

exports[`view list parentConnection 1`] = `
Object {
  "data": Array [
    BoardMemberView {
      "boardId": "3",
      "boardName": "Occaecati adipisci vel",
      "inviteCount": "4",
      "invitees": Array [
        "24",
        "38",
        "1",
        "61",
      ],
      "inviterId": "79",
      "username": "joe922",
    },
    BoardMemberView {
      "boardId": "13",
      "boardName": "Suscipit aut cum",
      "inviteCount": "1",
      "invitees": Array [
        "79",
      ],
      "inviterId": "79",
      "username": "joe922",
    },
    BoardMemberView {
      "boardId": "25",
      "boardName": "Libero similique vitae",
      "inviteCount": "1",
      "invitees": Array [
        "79",
      ],
      "inviterId": "79",
      "username": "joe922",
    },
    BoardMemberView {
      "boardId": "29",
      "boardName": "Ut provident assumenda",
      "inviteCount": "1",
      "invitees": Array [
        "79",
      ],
      "inviterId": "79",
      "username": "joe922",
    },
  ],
  "pageInfo": Object {
    "hasNextPage": false,
    "hasPreviousPage": false,
  },
}
`;

exports[`view list parentConnection with invalid attribute (reject) 1`] = `[Error: column "invalidAttributeName" does not exist]`;
